Updated eip docs